<resources>
    <string name="app_name">RoomDatabase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editTextFName">First Name</string>
    <string name="editTextLName">Last Name</string>
    <string name="editTextAge">Age</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonUpdate">Update</string>
</resources>